[project]
name = "convolutional-auto-encoder-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MURAKI Taichi", email = "muraki.taichi@gmail.com" }
]
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "matplotlib>=3.7.2",
    "albumentations>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
